# rust-gif-pom

./: Cargo.toml
src/: clock_widget.rs  gif_widget.rs  main.rs
